[package]
name = "log_loki"
description = "Provides loki logging for use with the log crate. Can be used standalone or with a logging framework like fern."
version = "0.2.0"
edition = "2024"
license = "MPL-2.0"
authors = ["Aurora McGinnis <aurora@aurora.vg>"]
categories = ['development-tools::debugging']
keywords = ['loki', 'logging', 'log', 'logfmt']
repository = "https://github.com/aurowora/log_loki"
readme = "README.md"

[dependencies]
bitflags = { version = "2.10", optional = true }
derivative = "2.2"
flate2 = { version = "1.0", optional = true }
http = "1.3"
kanal = "0.1"
log = { version = "0.4", features = ["std"] }
rustls = { version = "0.23", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "3.1", default-features = false, features = ["charset"] }
url = "2.3"

[features]
# Enable support for TLS-enabled Loki hosts with ureq/rustls
tls = ["ureq/rustls", "dep:rustls"]
# Use your system's certificate store instread of webpki-roots
tls-native-certs = ["ureq/platform-verifier"]
# Compress outgoing logs with gzip via the flate2 crate
compress = ["dep:flate2"]
# Enable unstable key value support for structured logging
kv_unstable = ["log/kv_unstable"]
# Enable logfmt format support
logfmt = ["dep:bitflags"]
# Default options
default = ["tls", "tls-native-certs", "logfmt", "compress"]
